--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@json2csv/plainjs": "^7.0.6",
     "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^6.4.6",
     "@types/react-redux": "^7.1.33",
@@ -27,8 +28,10 @@
     "@testing-library/dom": "^10.3.1",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
+    "@types/json2csv": "^5.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-mock-store": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
@@ -43,6 +46,7 @@
     "husky": "^8.0.3",
     "jsdom": "^24.1.0",
     "prettier": "3.3.2",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vitest": "^2.0.3"
