--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbo",
-    "start": "next start",
+    "dev": "node ./server.js",
+    "start": "cross-env NODE_ENV=production node ./server.js",
     "build": "next build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -17,9 +17,16 @@
   "dependencies": {
     "@json2csv/plainjs": "^7.0.6",
     "@reduxjs/toolkit": "^2.2.6",
+    "@remix-run/express": "^2.11.0",
+    "@remix-run/node": "^2.11.0",
+    "@remix-run/react": "^2.11.0",
+    "@remix-run/serve": "^2.11.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
+    "cross-env": "^7.0.3",
+    "express": "^4.19.2",
+    "isbot": "^4.4.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,6 +34,7 @@
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
+    "@remix-run/dev": "^2.11.0",
     "@testing-library/dom": "^10.3.1",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
