fix: search value save in LS

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -30,6 +30,7 @@
   },
   "include": [
     "src",
+    "app/**/*",
     "./dist/types/**/*.ts",
     "./next-env.d.ts",
     "app/components/header",
