--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@remix-run/node": "^2.11.0",
     "@remix-run/react": "^2.11.0",
     "@remix-run/serve": "^2.11.0",
+    "@remix-run/testing": "^2.11.1",
     "@testing-library/jest-dom": "^6.4.6",
     "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
